--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -40,7 +40,7 @@
           }
           @comps.tagValueDetailed(session.tags, session.localization)
 
-          <div class="text-center mt-2">
+          <div class="text-center mt-2 buttonsCtnr">
             <a href="@routes.InterviewCtrl.downloadTags" class="btn btn-primary">
               <i class="fa fa-download"></i>&nbsp;Download Policy as JSON
             </a>
