--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -24,11 +24,9 @@
   </div>
   <footer>
     <div class="container">
-      <span class="pre-release-warn">
+      <div class="pre-release-warn">
         <i class="fa fa-warning fa-lg"></i> Do not use interview results as a legal recommendation.
-      </span>
-      <br>
-      <br>
+      </div>
       <ul class="list-inline">
         <li class="list-inline-item">PolicyModels/DataTags project: <a href="http://datatags.org">datatags.org</a>.<br>
             &copy; 2019 by the President and Fellows of Harvard College.</li>
@@ -39,6 +37,9 @@
         <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="Privacy Tools for Sharing Research Data, at Harvard School of Engineering and Applied Sciences" href="http://privacytools.seas.harvard.edu" target="_blank"><img src="/assets/images/seas-logo-small.png" alt="Harvard SEAS logo" /></a></li>
         <li class="list-inline-item"><a data-toggle="tooltip" data-placement="top" title="The Institute for Quantitative Social Science at Harvard University" href="http://iq.harvard.edu" target="_blank"><img src="/assets/images/iqss-logo-small.png" alt="IQSS logo" /></a></li>
       </ul>
+      <div class="commitTag">
+        Commit: @comps.buildTag()
+      </div>
     </div>
   </footer>   
     <script src="@routes.Assets.at("lib/jquery/jquery.min.js")"></script>
