updates to the home page

--- a/datatags-app/app/views/index.scala.html
+++ b/datatags-app/app/views/index.scala.html
@@ -18,14 +18,14 @@
 
   @templates.bsBase("PolicyModel Server", scripts = scripts, extraHead = extraHead)(Html("")) {
     <div class="row">
-      <div class="col-md-12">
-        <h1>PolicyModels<sup><small>working title</small></sup></h1>
+      <div class="col-md-12 my-2">
+        <h1>PolicyModels</h1>
         <p>
           <div class="float-right">
             <a href="@startTaggingUrl" class="btn btn-primary btn-lg">View Models</a>
           </div>
           Policy Models (formerly: DataTags)
-          is a prototype tool for creating formal models of policies, such as proper handling for a given dataset or benefit entitlements for unemployed people. Originally intended as a way of helping researchers understand the laws and contractual agreements that govern how they can share sensitive data,
+          is a tool for creating formal models of policies, such as proper handling for a given dataset or benefit entitlements for unemployed people. Originally intended as a way of helping researchers understand the laws and contractual agreements that govern how they can share sensitive data,
           it may also be used to model certain types of public policies.</p>
       </div>
     </div>
