--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -21,11 +21,10 @@
   <div class="row my-2">
     <div class="col">
       <div class="card">
-        <div class="card-header bg-success text-white">
+        <div class="card-header bg-info text-white">
           Interview Completed - Final Results
         </div>
         <div class="card-body">
-
           <ul class="nav nav-tabs" id="resultTabs" role="tablist" style="justify-content: center">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" id="detailedTabTitle" href="#detailedTab">Detailed</a>
@@ -57,7 +56,7 @@
   <div class="row my-2">
     <div class="col">
       <div class="card">
-        <div class="card-header bg-info text-white">
+        <div class="card-header bg-secondary text-white">
           Answer History
         </div>
         <div class="card-body">
