--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -35,7 +35,7 @@
 <div class="row">
   <div class="col-md">
       <div class="card m-2">
-          <div class="card-header bg-info text-white">
+          <div class="card-header bg-secondary text-white">
               Answer Feed
           </div>
           <div class="card-body">
@@ -51,7 +51,7 @@
   </div>
   <div class="col-md">
       <div class="card m-2">
-          <div class="card-header bg-info text-white">
+          <div class="card-header bg-secondary text-white">
               Current Tags
           </div>
           <div class="card-body">
