--- a/datatags-app/app/views/interview/allQuestions.scala.html
+++ b/datatags-app/app/views/interview/allQuestions.scala.html
@@ -2,17 +2,14 @@
 @import edu.harvard.iq.datatags.model.graphs.nodes._
 @import collection.mutable.Set
 
-@(verKit: VersionKit,
-loc:Localization)(implicit req:Request[_])
+@(verKit: VersionKit, loc:Localization)(implicit req:Request[_])
 
 @visitAskNode( nd:AskNode, baseLevel:Boolean, visited:Set[String] ) = {
   <div class="question">
     @comps.questionPanel(nd, verKit, loc, Seq(), enableComments = true, false, showId = true, false, None)
-
     @for( a <- nd.getAnswers ) {
       @visitNode( nd.getNodeFor(a), baseLevel, visited )
     }
-
   </div>
 }
 
