--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -27,7 +27,7 @@
         <div class="card-body">
           <ul class="nav nav-tabs" id="resultTabs" role="tablist" style="justify-content: center">
             <li class="nav-item">
-              <a class="nav-link active" data-toggle="tab" id="detailedTabTitle" href="#detailedTab">Detailed</a>
+              <a class="nav-link active" data-toggle="tab" id="detailedTabTitle" href="#detailedTab">Report</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#summaryTab" id="summaryTabTitle">Summary</a>
