Comment viewer honors RTL/LTR (closes #92)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -761,3 +761,10 @@ ul.localizations {
   float:right;
 }
 
+details > summary:focus {
+  outline: none;
+}
+
+details:open {
+  background-color: #2aabd2;
+}
