Added model changes for supporting affirmation screens and trivial localizations (#43, #85)

--- a/datatags-app/app/assets/css/styledInputs.less
+++ b/datatags-app/app/assets/css/styledInputs.less
@@ -14,13 +14,8 @@ label.buttonLike{
 
 input[type=checkbox]:checked + label.buttonLike,  input[type=radio]:checked + label.buttonLike{
   background-color: #DDD;
-  box-shadow: 0 0 2px rgba(0,0,0,.25);
+  box-shadow: 0 0 3px rgba(128,255,200,.25) inset;
   top: 2px;
-  &::after{
-    content:'✔︎';
-    margin-left:.2em;
-    color: #080;
-  }
 }
 
 input[type=checkbox] + label.buttonLike{
