--- a/datatags-app/app/views/backoffice/commentViewer.scala.html
+++ b/datatags-app/app/views/backoffice/commentViewer.scala.html
@@ -9,7 +9,7 @@
   <div class="row my-2">
     <div class="col">
       <a href="@routes.ModelCtrl.showVersionPage(kit.md.id.modelId, kit.md.id.version)">
-        <i class="fa fa-arrow-left"></i> @{kit.model.map(_.getMetadata.getTitle ).getOrElse(kit.md.id.modelId + "/" + kit.md.id.version)}
+        <i class="fa fa-arrow-left"></i> @{kit.policyModel.map(_.getMetadata.getTitle ).getOrElse(kit.md.id.modelId + "/" + kit.md.id.version)}
       </a>
       <h3>
         <div class="float-right">
@@ -40,7 +40,7 @@
       <div class="commentSubjectCtnr" @if(loc.isRtl){style="direction:rtl; text-align:right"}>
         @if(cmt.targetType.trim == "meta"){
           @cmt.targetContent.trim match {
-            case "policy-space" => {@comps.tagType(kit.model.get.getSpaceRoot, loc)}
+            case "policy-space" => {@comps.tagType(kit.policyModel.get.getSpaceRoot, loc)}
             case "readme" => {
               @if(readmeOpt.isDefined) {
                 @Helpers.render(readmeOpt.get)
@@ -50,7 +50,7 @@
             }
           }
         } else {
-          @defining(kit.model.get.getDecisionGraph.getNode(cmt.targetContent)) {
+          @defining(kit.policyModel.get.getDecisionGraph.getNode(cmt.targetContent)) {
             case ask: AskNode => {
               @comps.questionPanel(ask, kit, loc, Seq(), enableComments=false, interactive=false, showId = true, false, None)
             }
