--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -171,6 +171,10 @@ h1, h2, h3 {
 
 .transcript {
   .question {
+    display: list-item;
+    margin-left: 1.5em;
+    list-style-type: decimal;
+
     border: 1px solid #DDD;
     margin: 1em 0;
     .text {
@@ -578,6 +582,12 @@ footer {
 
   .call {
 
+  }
+
+  .question {
+    display: list-item;
+    margin-left: 1.5em;
+    list-style-type: decimal;
   }
 }
 
